css/master.css
:root{
	--main-color:#ff9800;
}
*{
	box-sizing: border-box;
}
html{
	scroll-behavior: smooth;
}
body{
	font-family: 'Open Sans', sans-serif;
}
.container{
	padding-left: 15px;
	padding-right: 15px;
	margin: auto;
}
/*start settings box*/
.settings-box{
	position: fixed;
	left: -200px;
	top: 0;
	width: 200px;
	background-color: #fff;
	z-index: 1000;
	height: 100vh;
	border: 1px solid #AEAEAE;
}
.settings-box.open{
	left: 0;
}
.settings-box i.fa-cog{
	padding: 8px 0;
	width: 30px;
}
.settings-box .toggle-gear{
	position: absolute;
	right: -30px;
	top: 100px;
	background-color: #fff;
	text-align: center;
	cursor: pointer;
	font-size: 20px;
}
.settings-box div.option-box{
	padding: 10px;
	text-align: center;
	margin: 10px;
	background-color: #ccc;
}
.settings-box div.option-box h4{
	margin: 0;
	color: #666;
	font-size: 14px;
}
.settings-box div.option-box .Colors-list{
    list-style: none;
    text-align: center;
    padding: 0;
    margin: 10px 0 0;
}
.settings-box .option-box .Colors-list li{
	width: 25px;
	height: 25px;
	background-color: #333;
	border-radius: 50%;
	cursor: pointer;
	display: inline-block;
	border:3px solid #ccc;
}
.settings-box .option-box .Colors-list li.active{
	border: 2px solid #fff;
}
.settings-box .option-box .Colors-list li:first-child{
	background-color: #ff9800;
}
.settings-box .option-box .Colors-list li:nth-child(2){
	background-color: #E91E63;
}
.settings-box .option-box .Colors-list li:nth-child(3){
	background-color: #009688;	
}
.settings-box .option-box .Colors-list li:nth-child(4){
	background-color: #09A3F4;
}
.settings-box .option-box .Colors-list li:nth-child(5){
	background-color: #4CAF50;
}
.settings-box .yes,
.settings-box .no{
	width: 50px;
	background-color: var(--main-color);
	font-size: 14px;
	color: #fff;
	display: inline-block;
	margin-top: 15px;
	padding: 4px 10px;
	font-weight: bold;
	border-radius: 4px;
	cursor: pointer;
	opacity: 0.5;
	user-select: none;
}
.settings-box span.active{
	opacity: 1;
}
.settings-box .reset-btn{
	background-color: #FF392E;
	border: none;
	width: 178px;
	margin: 10px;
	padding: 10px;
	color: #FFF;
	box-shadow: 3px 5px 5px rgba(0,0,0,0.3);
	transition: transform 0.3s linear;
	cursor: pointer;
}
.settings-box .reset-btn:active{
	box-shadow: 0;
	transform: translate(3px,5px);
}
/*endsettings box*/

/*start nav bullets*/
.nav-bullets{
	position: fixed;
	right: 0;
	top: 50%;
	transform: translateY(-50%);
	width: 50px;
	z-index: 1000;
	transition: 0.3;
}
.nav-bullets .bullet{
	width: 20px;
	height: 20px;
	margin: 20px auto;
	border-radius: 50%;
	cursor: pointer;
	position: relative;
	border: 3px solid var(--main-color);
}
.nav-bullets .bullet:hover .tooltip{
	display: block;
}
.nav-bullets .bullet .tooltip{
	background-color: var(--main-color);
	width: 120px;
	color: #fff;
	padding: 8px 10px;
	position: absolute;
	right: 32px;
	top: -10px;
	text-align: center;
	display: none;
	opacity: 0.7;
}
.nav-bullets .bullet .tooltip:before{
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 10px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: -20px;
	border-color:transparent transparent transparent  var(--main-color);
	cursor: default;
	pointer-events: none;
}
/*start nav bullets*/

/*start landing*/
.landing-page{
	min-height: 100vh;
	background-image: url('../images/01.jpg');
	background-size: cover;
	position: relative; 
}
.landing-page .container{
	position: relative;
	z-index: 1000;
}
.landing-page .overlay{
	background-color: rgba(0, 0, 0, 0.64);
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 1;
}
.header{
	position: relative;
	z-index: 2;
	color: #fff;
	display: flex;
	padding: 10px;
}
.header .logo{
	width: 300px;
    padding: 15px;
    font-weight: bold;
}
.header .links-container{
	width: 100%; 
	text-align: right;
}
.header .links{
	list-style: none;
	padding-left: 0;
	width: 100%;
	font-size: 15px;
}
.header .links li{
	display: inline-block;
	margin-left: 10px;
}
.header .links li a{
	color:#fff;
	text-decoration: none;
	transition: 0.3s;
	outline: none;
	display: inline-block;
}
.header .links li a:hover,
.header .links li a.active{
	color: var(--main-color);
}
.header .links-container .toggle-menue{
	width: 30px;
	height: 30px;
	font-size: 30px;
	cursor: pointer;
	margin-top: 15px;
	display: none;
	position: relative;
	text-align: center;
}
.header .links-container .toggle-menue.menue-active:before{
	content: '';
	border-width: 10px;
	border-style: solid;
	border-color: transparent transparent #FFF transparent;
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	bottom: -15px;
}
.intro-text{
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
	z-index: 2;
	color: #fff;
	text-align: center;
	width: 95%;
}
.intro-text h1{
	font-size: 35px;
	margin: 0 0 12px;
	width: 100%;
}
.intro-text h1 span{
	color: var(--main-color);
}
.intro-text p{
	line-height: 1.6;
	font-size: 20px;
	margin: 0;
}
@media (max-width: 575px){
	.intro-text h1{
		font-size: 25px;
	}
	.intro-text p{
		font-size: 15px;
	}
}
/*End landing*/

/*start about us*/
.about-us{
	padding-top: 50px;
	padding-bottom: 50px;
	display: flex;
}
.about-us .info-box{
	flex: 1;
	padding: 30px;
}
.about-us .info-box h2{
	font-weight: bold;
	font-size: 30px;
	color: var(--main-color);
	margin: 0 0 10px;
}
.about-us .info-box p{
	line-height: 1.6;
	color:#717171;
	margin: 0;
}
.about-us .img-box{
	flex: 1;
	text-align: center;
}
.about-us .img-box img{
	width: 270px;
	margin-top: 50%;
}
@media (max-width: 767px){
	.about-us{
		display: block;
		text-align: center;
	}
	.about-us .img-box img{
		width: 90%;
		margin-top:40px;
	}
	.about-us .info-box{
		padding: 0;
	}
}
/*end about us*/
/*start our skills*/
.our-skills{
	padding-top: 50px;
	padding-bottom: 50px;
	background-color: #EEE;
}
.our-skills h2{
	font-weight: bold;
	font-size: 30px;
	color: var(--main-color);
	margin: 0 0 50px;
	text-align: center;	
}
/* ... */

